<?xml version="1.0"?>

<resources>

    <string name="app_name">Think-in\' Green</string>

    <!-- Strings to use the data base-->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Here goes the info of the app in back4app -->
    <string name="back4app_app_id">W6IoAxrOBTot04UtoQpcxFPzA1HxvS0xcUNYI7pJ</string>
    <string name="back4app_client_key">ZLAhm9UHc58lXHTJXx7hnDZccxjHcEa4mktJEKCb</string>

    <string name="strCreateAccount">Crear</string>
    <string name="titleAdvicesActiv">ConsejosActiv</string>
    <!---<string name="titleHome">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>-->
    <string name="strWeeklyAdvice">Consejo Semanal</string>
    <string name="strDailyAdvice">Consejo Diario</string>
    <string name="strAdvicesList">Lista de Consejos</string>
    <string name="strSettings">Ajustes</string>
    <string name="titleRewardsActiv">Recompensas :D</string>

    <string name="titleRestaurantsActiv">Restaurantes</string>

    <string name="large_text"> " MIMI CHENG'S.\n\n" "Family recipes. Made from scratch daily. Always fresh." "We are happy to be able to work with people with the same values as us, prioritizing the dignity of both the livestock" "and the farmers, and have proudly partnered with purveyors like Pat La Frieda and Pino's Butcher Shop to source the " "best pasture-raised and organic meat.\n" "At the heart of our core values is to cultivate each season's best produce and the highest quality ingredients" "that we can find. We believe that eating organic and local food is the best medicine that we can give our bodies" "and that it's important to know about growing techniques. Eating local also helps strengthen the very community" "that we live in, maximize the freshness and nutritional value of our food, and minimize our carbon footprint. \n\n" " February Special Dumplings.\n\n" "Our February Dumpling Special is a dish that we grew up clamoring for with its delicate wontons and fiery sauce. " "This month's special features Spicy Chili Oil Wontons made with organic chicken and celery, dressed with scallions, " "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge " "cilantro, and toasted sesame seeds. Do not order this if you can't handle spicy. " </string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="strAdviceOption">Seleccione una Opcion:</string>
    <string name="strSuccessTitle">¡Éxito!</string>
    <string name="strSuccessMsgProfile">¡Has actualizado correctamente tu perfil!</string>
    <string name="strFailTitle">Algo salió mal</string>
    <string name="strFailMsgProfile">Tus datos no han sido actualizados correctamente. Prueba en otro momento.</string>

    <string name="strSearchStores">Tiendas\nZeroWaste</string>
    <string name="strRewards">Recompensas</string>
    <string name="strAdvices">Consejos</string>
    <string name="strRestaurants">Restaurantes\nZeroWaste</string>
    <string name="strPreferences">Preferencias</string>
    <string name="strRewardSelection">Selecciona una categoría\nde recompensas</string>
    <string name="strInstSingUp">Completa tus datos :)</string>
    <string name="strFieldError">Por favor completa el campo</string>
    <string name="strSelectAcct">Selecciona el tipo de cuenta</string>
    <string name="strPerson">Persona</string>
    <string name="strInst">Institución</string>
    <string name="strWeeklyAdv">Consejo semanal</string>
    <string name="strAdvList">Lista de consejos</string>
    <string name="strPref">Ajustes</string>
    <string name="strUsrLogIn">Usuario:</string>
    <string name="strPwdLogIn">Contraseña:</string>
    <string name="strLogIn">Iniciar sesión</string>
    <string name="strCreateAcct">Crear cuenta</string>
    <string name="strLogFail">Usuario o contraseña incorrecta.</string>
    <string name="strWelcome">Bienvenido:</string>
    <string name="strOk">Ok</string>
    <string name="strCancel">Cancelar</string>
    <string name="strSure">¿Estás seguro?</string>
    <string name="strWrongPwd">Contraseña no coincide</string>


    <!--Store -->
    <!--Categories -->
    <string name="strCatDcts">Descuentos</string>
    <string name="strCatThemes">Temas</string>

    <!--Discounts -->
    <string name="strDctEns">Ensaladissima: 20% en Ensalada César</string>
    <string name="strDctEnsCode">CE20R</string>
    <string name="strDctMc">McDonalds: Gratis una manzana en cualquier combo grande</string>
    <string name="strDctMcCode">MXN3087</string>
    <string name="strDctCoffee">Coffee House: Café biodegradable a 20 pesos</string>
    <string name="strDctCoffeeCode">BI0c0FF3</string>

    <!--Themes -->
    <string name="strThemeDefault">Tema por default</string>
    <string name="strThemeDefaultCode">THMDFT</string>
    <string name="strThemeDark">Tema oscuro</string>
    <string name="strThemeDarkCode">THMDRK</string>
    <string name="strThemeLight">Tema claro</string>
    <string name="strThemeLightCode">THMCLR</string>
    <string name="strThemeInv">Tema opaco</string>
    <string name="strThemeInvCode">THMINVRS</string>
    <string name="strThemeSea">Tema acuático</string>
    <string name="strThemeSeaCode">THMAQUA</string>


    <string name="str_EditProfile">Editar Perfil</string>
    <string name="str_Save">Guardar</string>
    <string name="str_Logout">Cerrar sesión</string>
    <string name="str_Exit">Salir</string>
    <string name="str_User">Usuario</string>
    <string name="str_Email">Correo</string>
    <string name="str_Pwd">Contraseña</string>
    <string name="str_Read">Marcar como leído</string>
    <string name="str_getPoints">¡Puntos conseguidos!</string>
    <string name="str_AlreadyRead">Consejo ya leído</string>
    <string name="str_Welcome">¡Bienvenido</string>
    <string name="str_setting">Ajustes</string>
    <string name="strLoginIn">Iniciando sesión...</string>
    <string name="strSigningUp">Creando cuenta...</string>
    <string name="strLoading">Cargando...</string>

    <string name="strDiscountsNotAvailable">¡Espéralos próximamente!</string>
    <string name="strDiscountsDescription">Podrás ahorrar con tu nuevo estilo de vida</string>

    <string name="strFewPoints">Puntos Insuficientes :(</string>
    <string name="strRewardUnlocked">Tema Seleccionado :D</string>

    <string name="strRecyclingAdv">Reciclaje</string>
    <string name="strDIYAdv">D.I.Y</string>
    <string name="strReduceAdv">Reducir</string>
    <string name="strZeroWasteAdv">Zero Waste</string>
    <string name="strFrequencyAdv">Frecuencia de consejo</string>
    <string name="strTypeAdv">Seleccione el tipo de consejo</string>
    <string name="strDailyAdv">Día</string>
    <string name="strWeekAdv">Sem</string>

    <string name="strNoNetwork">No hay conexión al Servidor :(</string>
    <string name="strGPSOffStore">Necesito el GPS para saber cuál tienda es la más cercana, ¿quieres prenderlo?</string>
    <string name="strGPSOffRestaurant">Necesito el GPS para saber cuál restaurante es el más cercano, ¿quieres prenderlo?</string>
    <string name="strGPSUpdate">Ubicación actualizada</string>
    <string name="strGPSUnknown">Ubicación desconocida</string>
    <string name="strNo">No</string>
    <string name="strYes">Sí</string>

    <string name="strViewMap">Ver en un mapa</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strNewPwd">Nueva contraseña</string>
    <string name="strConfirmPwd">Confirmar contraseña</string>
    <string name="strStoresMenu">Tiendas</string>
    <string name="strRestMenu">Restaurantes</string>
    <string name="strPerAdv">Consejo para ti</string>

    <string name="strDevelopedBy">Creado por</string>
    <string name="strAssigment">Proyecto de desarrollo para\nDispositivos Móviles</string>
    <string name="strSchool">ITESM CEM</string>
    <string name="strCamara">Alejandro Cámara Martínez</string>
    <string name="strMatCamara">A01370909</string>
    <string name="strJalay">Julio César González Menéndez</string>
    <string name="strMatJalay">A013706667</string>
    <string name="strDess">Desirée Isabel López Ramírez</string>
    <string name="strMatDess">A01371590</string>
    <string name="strSandy">Sandra Rodríguez Oseguera</string>
    <string name="strMatSandy">A01371995</string>
    <string name="strMailThinking">thinkingreenoficial@gmail.com</string>
</resources>
