<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.itesm.thinkinggreen.Fragments.AdviceWeekFrag">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitleWeeklyAdvice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/strWeeklyAdvice"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imgWeeklyAdvice"
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:layout_gravity="center"
            android:src="@drawable/espejo_de_pared_con_cds" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvDescriptionWeeklyAdvice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/large_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <Button
                    android:id="@+id/btnFinish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryPastel"
                    android:text="@string/str_Read" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>

</FrameLayout>

